=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.98

   * switched SDF parsing into C -- it's "way faster dude!"

   * new "move" option for the fuse command

   * url support for pdb, mol, mol2, sdf, xplor, ccp4, pkl, and pse files.

   beta29

   * angle & dihedral visualization

   * fixed control-panel click bug

   * reorganized the Tcl/Tk modules to better enable customized
     user interfaces

   * fixed long-standing transparency shadow bug

   * improved 64-bit cleanliness

   * fixed stereo rendering for selections and edit indicators

   * added support for embedded data on stdin

   * support for 4-letter residue codes in PDB files

   * new selection operator for proteins "pepseq/ps." with 1-letter
     peptide codes

   * streamlined launch time in various ways

   * updated lighting model to increase WYSIWG characteristics
     between OpenGL and ray-tracing

   * fixed major bug with symmetry expansion

   * overhaul of the scene subsystem to create some order

   * orient command now chooses the least perturbation from the 
     current view

   * "as" command for more efficient changing of representations

   * reorganized color menus and added some new colors

   * selections now more visible

   * ribbon_side_chain_helper

   * new scroll wheel capabilities (MvSZ, MovZ)

   * used CHUD to optimize the new raytracer code

   * ray tracer now supports perspective by default.  Unfortunately, 
     this significantly slows down raytracing...

   * single-click actions

   * continued elimination of global state information

   * texture_fonts for better performance on low-end ATI hardware

   * fixed F10 action in external gui

   * added colors for each atomic element, plus deuterium

   * added 32 new automatic colors

   * fixed bugs with import pymol launch approach

   * fixed bug with TRJCONV multimodel PDB files
