@@ -556,10 +556,11 @@ CSetting *SettingNewFromPyList(PyMOLGlobals *G,PyObject *list);
 #define cSetting_angle_label_position       406
 #define cSetting_dihedral_size              407
 #define cSetting_dihedral_label_position    408
+#define cSetting_defer_builds_mode          409
 
 /* cSetting_ss_INIT must always be last setting_index +1 */
 
-#define cSetting_INIT                       409
+#define cSetting_INIT                       410
 
 #endif
 
